--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="weather_text">Weather</string>
     <string name="search_text">Search</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="locations">
+        <item>Glasgow</item>
+        <item>London</item>
+        <item>New York</item>
+        <item>Oman</item>
+        <item>Mauritius</item>
+        <item>Bangladesh</item>
+    </string-array>
+
 </resources>
